--- a/10-algebra-linear.ipynb
+++ b/10-algebra-linear.ipynb
@@ -7,10 +7,10 @@
     "## Algebra matricial \n",
     "\n",
     "Nesse capitulo estudamos a forma de manipular matrices e vetores numéricamente. Usando\n",
-    "esses objetos aprendemos como resolver sistemas de equações lineares que aparecem em\n",
+    "esses objetos aprendemos a resolver sistemas de equações lineares que aparecem em\n",
     "muitas áreas da ciência.\n",
     "\n",
-    "Mesmo estudando a forma de resolver sistemas de equações usando matrizes, não vamos escrever nossas rotinas mas usaremos as rotinas sofisticadas da biblioteca [`numpy.linalg`](https://docs.scipy.org/doc/numpy-1.13.0/reference/routines.linalg.html).\n"
+    "Mesmo estudando a forma de resolver sistemas de equações usando matrizes, não vamos escrever nossas rotinas mas usaremos as rotinas sofisticadas da biblioteca [`numpy.linalg`](https://docs.scipy.org/doc/numpy-1.13.0/reference/routines.linalg.html), estudaremos, no entanto, as bases matemáticas.\n"
    ]
   },
   {
@@ -48,18 +48,26 @@
     "###  propriedades matemáticas das matrizes\n",
     "\n",
     "\n",
-    "<table border=\"1\">\n",
+    "<table border=\"1\" style=\"width:80%\"  >\n",
     "<thead>\n",
     "<tr><th align=\"center\">              Relations               </th> <th align=\"center\">      Name     </th> <th align=\"center\">                            matrix elements                            </th> </tr>\n",
     "</thead>\n",
     "<tbody>\n",
-    "<tr><td align=\"center\">   $A = A^{T}$                               </td> <td align=\"center\">   symmetric          </td> <td align=\"center\">   $a_{ij} = a_{ji}$                                                          </td> </tr>\n",
+    "<tr><td align=\"center\">   $A = A^{T}$ </td> <td align=\"center\">   symmetric  </td> <td align=\"center\">   $a_{ij} = a_{ji}$  </td> </tr>\n",
+    " \n",
     "<tr><td align=\"center\">   $A = \\left (A^{T} \\right )^{-1}$          </td> <td align=\"center\">   real ortogonal    </td> <td align=\"center\">   $\\sum_k a_{ik} a_{jk} = \\sum_k a_{ki} a_{kj} = \\delta_{ij}$                </td> </tr>\n",
     "<tr><td align=\"center\">   $A = A^{ * }$                             </td> <td align=\"center\">   real matrix        </td> <td align=\"center\">   $a_{ij} = a_{ij}^{ * }$                                                    </td> </tr>\n",
     "<tr><td align=\"center\">   $A = A^{\\dagger}$                         </td> <td align=\"center\">   hermitian          </td> <td align=\"center\">   $a_{ij} = a_{ji}^{ * }$                                                    </td> </tr>\n",
     "<tr><td align=\"center\">   $A = \\left (A^{\\dagger} \\right )^{-1}$    </td> <td align=\"center\">   unitary            </td> <td align=\"center\">   $\\sum_k a_{ik} a_{jk}^{ * } = \\sum_k a_{ki}^{ * } a_{kj} = \\delta_{ij}$    </td> </tr>\n",
     "</tbody>\n",
     "</table>\n",
+    "\n",
+    "### Definições:\n",
+    "\n",
+    "* **Matriz Hermitiana**: Uma matriz é dita Hermitiana ou auto-adjunta se for idéntica à sua transposta conjugada.\n",
+    "* **Matriz transposta conjugada**: a matriz transposta conjugada da matriz $A$ de $n \\times m$ é outra matriz $n \\times m$, formada pelo complexo conjugado da matriz transposta, $A^T$. Costuma se denotar por $A^{*}$.\n",
+    "\n",
+    "\n",
     "\n",
     "### Algumas matrizes famosas\n",
     "\n",
@@ -1032,7 +1040,7 @@
    "source": [
     "#### Determinante e inverso de uma matriz\n",
     "\n",
-    "A definição básica do determinante é:\n",
+    "A definição do determinante é:\n",
     "\n",
     "$$\n",
     "det\\{A\\}  = \\sum_{p} \\left( (-1)^p  \\prod_{i=1}^n a_{i,{p_i}}  \\right)\n",
@@ -1053,7 +1061,7 @@
     "\n",
     "\n",
     "$$\n",
-    "A = \\frac{1}{|A|}\n",
+    "A^{-1} = \\frac{1}{|A|}\n",
     "     \\begin{bmatrix}\n",
     "     d & -b\\\\\n",
     "     -c & a \\\\\n",
@@ -1075,7 +1083,7 @@
     "     \\end{bmatrix},\n",
     "$$\n",
     "\n",
-    "O calculo do determinante e a inversa já é mais complicado (**veja exemplo no quadro**).\n",
+    "Os calculos do determinante e a matriz inversa são mais complicados (**veja exemplo no quadro**).\n",
     "\n",
     "**Um método mais eficiente é necessârio**\n"
    ]
