--- a/11-EDO3.ipynb
+++ b/11-EDO3.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## EDO 3\n",
-    "### Visualizando linhas de campo\n",
+    "### Visualizando linhas de campo - visualização 3D\n",
     "\n",
     "A visualização de linhas de campo é fundamental na comprehensão do conceito mesmo de campo vectorial. \n",
     "\n",
