--- a/00-intro.ipynb
+++ b/00-intro.ipynb
@@ -60,9 +60,9 @@
     "23. [Algebra matricial 2](10-algebra-linear.ipynb)\n",
     "24. Analise de séries temporais 1\n",
     "25. Analise de séries temporais 2\n",
-    "26. [Solução de equações diferenciais ordinárias EDO 1](11-EDO.ipynb)\n",
-    "27. [EDO 2](EDO2.ipynb)\n",
-    "28. [EDO 3, graficando linhas de campo e diagramas de contorno](EDO3.ipynb)\n",
+    "26. [EDO 1, Solução de equações diferenciais ordinárias](11-EDO.ipynb)\n",
+    "27. [EDO 2, O projetil e o péndulo](11-EDO2.ipynb)\n",
+    "28. [EDO 3, graficando linhas de campo e diagramas de contorno](11-EDO2.ipynb)\n",
     "28. [Introudução a redes neurais e aprendizado de máquina](12-redes_neurais.ipynb)\n",
     "<img src=\"Figs/machine-learning.png\" width=50% >\n",
     "30. Prova prática 3.\n",
