--- a/11-EDO.ipynb
+++ b/11-EDO.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "Estamos interessados em resolver uma EDO no intervalo $[a,b]$, usando $N$ pasos temporais e/ou espaciais.  Definimos nosso intervalo: $h = \\frac{b-a}{N}$\n",
     "\n",
-    "Podemos evaluar o valor seguinte da função $y$ em:\n",
+    "Com esse passo e a derivada de $y$ podemos evaluar o valor seguinte da função $y$ em:\n",
     "\n",
     "$$\n",
     "y_1 = y(t_1 = t_0 + h) \\;,\n",
@@ -118,7 +118,7 @@
     "\n",
     "$$\n",
     "y'' = f' = \\frac{df}{dt} = \\frac{\\partial f}{\\partial t} \n",
-    "+ \\frac{\\partial f}{\\partial y} \\frac{\\partial y}{\\partial y} = \\frac{\\partial f}{\\partial t}  + \\frac{\\partial f}{\\partial y}  f\n",
+    "+ \\frac{\\partial f}{\\partial y} \\frac{\\partial y}{\\partial t} = \\frac{\\partial f}{\\partial t}  + \\frac{\\partial f}{\\partial y}  f\n",
     "$$ \n",
     "\n",
     "o que leva a\n",
