--- a/11-EDO2.ipynb
+++ b/11-EDO2.ipynb
@@ -222,6 +222,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Atividade\n",
+    "\n",
     "Uma forma conhecida de força de atrito que pode freiar o projetil é proporcional à velocidade do projetil elevada a uma potencia $n$, logo estaria dada por:\n",
     "\n",
     "$$\n",
@@ -238,7 +240,15 @@
     "\\frac{d x}{dt} = v_x \\; \\;,  \\frac{d z}{dt} = v_z\n",
     "$$\n",
     "\n",
-    "com, $|v| = \\sqrt{v_x^2 + v_y^2}$."
+    "com, $|v| = \\sqrt{v_x^2 + v_y^2}$.\n",
+    "\n",
+    "\n",
+    "1) Adicione as forças de atrito no código acima, verifique o resultado para $n=1$.\n",
+    "\n",
+    "2) O valor de $n=1$ é valido para baixas velocidades. Já para velocidades médias e\n",
+    "altas $n=3/2$ e $n=2$, respectivamente.  Aumente a velocidade inicial do projetil para $100$\n",
+    "e $200$ m/s e mude os valores de $n$ para cada caso. Estime o valor de $k$ de tal forma\n",
+    "que a força de atrito inicial seja a mesma nos três casos. "
    ]
   },
   {
