--- a/11-EDO2.ipynb
+++ b/11-EDO2.ipynb
@@ -475,6 +475,34 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Atividade\n",
+    "\n",
+    "1. O modulo scipy tem rotinas para resolver sistemas de equações diferenciais parciais. Utilize `scipy.integrate.odeint` para integrar o sistema de equações do péndulo.  Compare os resultados com aqueles obtidos com a rotina RK4.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.integrate as si"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "si.odeint?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
