--- a/01-linux-vim.ipynb
+++ b/01-linux-vim.ipynb
@@ -144,9 +144,9 @@
     "\n",
     "1. No seu diretorio, dentro do home, crie um novo diretorio com seu nome\n",
     "\n",
-    "2. Identifique com **ls** se dentro da pasta do curso se encontra  o arquivo [Feynman](texto_feynman.txt)\n",
+    "2. Identifique com **ls** se dentro da pasta do curso se encontra uma pasta chamada `Ex` e dentro dela procure  o arquivo chamado `texto_feynman.txt`\n",
     "\n",
-    "3. Copie o arquivo \"texto_feynman.txt\" desde a pasta do curso até a pasta criada com seu nome\n",
+    "3. Copie o arquivo `texto_feynman.txt` desde a pasta do curso até a pasta criada com seu nome\n",
     "\n",
     "2. Dentro dessa pasta crie um arquivo chamado \"feynman_intro.txt\" \n",
     "\n",
