--- a/01-linux-vim.ipynb
+++ b/01-linux-vim.ipynb
@@ -60,6 +60,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# A anatomia de um computador\n",
+    "\n",
+    "\n",
+    "\n",
+    "<img src=\"Figs/computer-anatomy.gif\" width=60% >\n",
+    "\n",
+    "\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## A estrutura do Sistema Operacional Linux \n",
     "\n",
     "O SO das distribuições de linux, e aquelas beaseadas nele, tem a seguinte estrutura  \n",
