--- a/05-taylor-series.ipynb
+++ b/05-taylor-series.ipynb
@@ -623,7 +623,7 @@
     "onde $s$ é o bit do sinal, o exponente, $ {\\rm m} $ da a magnitude do número e a  mantisa é o numero mesmo.\n",
     "\n",
     "\\begin{equation}\n",
-    "{\\rm mantissa} = (0.a_{-1} a_{-2} ...a_{-n})_n = a_{-1} 2^{-1} + \n",
+    "{\\rm mantissa}  = 1\\times2^0 + a_{-1} 2^{-1} + \n",
     "                a_{-2} 2^{-2} + ... + a_n 2^{-n}\n",
     "\\end{equation}\n",
     "\n",
@@ -845,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
