--- a/06-Integracao-numerica.ipynb
+++ b/06-Integracao-numerica.ipynb
@@ -114,8 +114,8 @@
     "        \\simeq \\frac{h f_{i-1}}{3} + \\frac{4 h f_{i}}{3} + \\frac{h f_{i+1}}{3}  \n",
     "$$\n",
     "\n",
-    "A regra de Simpson requer integração sob pares de intervalos, logo \\textcolor{red}{um numero par\n",
-    "de intervalos é necessario, ou $N$ impar. Somando as contribuições de todos os pares de intervalos:\n",
+    "A regra de Simpson requer integração sob pares de intervalos, logo *um numero par\n",
+    "de intervalos é necessario*, ou $N$ impar. Somando as contribuições de todos os pares de intervalos:\n",
     "\n",
     "\n",
     "$$\n",
@@ -583,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
