--- a/08-leitura_escritura.ipynb
+++ b/08-leitura_escritura.ipynb
@@ -547,6 +547,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?time_continue=8&v=ts0OVXLY5yE\" frameborder=\"0\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "# Youtube\n",
+    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?time_continue=8&v=ts0OVXLY5yE\" frameborder=\"0\" allowfullscreen></iframe>')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1005,7 +1030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
