--- a/08-leitura_escritura.ipynb
+++ b/08-leitura_escritura.ipynb
@@ -548,19 +548,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?time_continue=8&v=ts0OVXLY5yE\" frameborder=\"0\" allowfullscreen></iframe>"
+       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/ts0OVXLY5yE?rel=0&amp;controls=0&amp;showinfo=0\" frameborder=\"0\" allowfullscreen></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
    "source": [
     "from IPython.display import HTML\n",
     "# Youtube\n",
-    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?time_continue=8&v=ts0OVXLY5yE\" frameborder=\"0\" allowfullscreen></iframe>')"
+    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/ts0OVXLY5yE?rel=0&amp;controls=0&amp;showinfo=0\" frameborder=\"0\" allowfullscreen></iframe>')"
    ]
   },
   {
