--- a/09a-interpolacao-Lagrange.ipynb
+++ b/09a-interpolacao-Lagrange.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
     "Como resultado de experimentos ou simulações, as vezes temos um conjunto de pontos na forma:\n",
     "\n",
     "\\begin{equation}\n",
-    "data = \\left((x_0,f(x_0)),(x_1,f(x_1)),\\ldots,(x_n,f(y_n))\\right)\n",
+    "{\\rm data} = \\left((x_0,f(x_0)),(x_1,f(x_1)),\\ldots,(x_n,f(y_n))\\right)\n",
     "\\end{equation}\n",
     "\n",
     "mas não temos uma expresão, $f(x)$ que nos permita calcular o valor da função em qualquer ponto arbitrario $x$. Muitas vezes os $x_i$ são igualmente espaçados, mas nem sempre.\n",
@@ -91,7 +91,7 @@
     "       + \\frac{(x - x_1)(x-x_2)}{(x_0 - x_1)(x_0-x_2)} y_0 \n",
     "\\end{equation}\n",
     "\n",
-    "A fórmula clásica da simplifica a interpolação foi criada por Lagrange e é dada por:\n",
+    "A fórmula clásica que simplifica a interpolação foi criada por Lagrange e é dada por:\n",
     "\n",
     "\\begin{equation}\n",
     "P_N(x) =  \\sum_{i=0}^N y_i\\left(\\prod_{k \\neq i} \\frac{x-x_k}{x_i-x_k} \\right)\n",
@@ -371,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
