--- a/09b-cubic_splines.ipynb
+++ b/09b-cubic_splines.ipynb
@@ -349,31 +349,47 @@
    "source": [
     "## Atividade\n",
     "\n",
-    "Vamos interpolar a função de Runge, $f(x) = \\frac{1}{1+25x^2}$, num conjunto de $n$ nós regularmente espaçados\n",
+    "1. Vamos interpolar a função de Runge, $f(x) = \\frac{1}{1+25x^2}$, num conjunto de $n$ nós regularmente espaçados\n",
     "\n",
     "$$\n",
     "x_k = -1 + \\frac{2(k-1)}{n-1}, \\; \\; k = 1,2,3, \\ldots , n\n",
     "$$\n",
     "\n",
-    "1. Considere os $n=4,6,8,11$ e calcule os polinomios de intepolação de Lagrange $P_N (x)$ para 41 pontos regularmente espaçados.\n",
+    "a. Considere os $n=4,6,8,11$ e calcule os polinomios de intepolação de Lagrange $P_N (x)$ para 41 pontos regularmente espaçados.\n",
     "\n",
-    "2. Calcule o erro específico no cálculo usando $\\epsilon = \\frac{f(x) - P_N(x)}{f(x)}$. \n",
+    "b. Calcule o erro específico no cálculo usando $\\epsilon = \\frac{f(x) - P_N(x)}{f(x)}$. \n",
     "\n",
-    "2. Aumente o número de pontos conhecidos de 4 para 6, para 8 e finalmente para 11, descreva o resultado.  Aumentar o número de pontos melhora o resultado?\n",
+    "c. Aumente o número de pontos conhecidos de 4 para 6, para 8 e finalmente para 11, descreva o resultado.  Aumentar o número de pontos melhora o resultado?\n",
     "\n",
-    "3. Agora utilize *splines* cúbicos e calcule o polinomio de interpolação $S(x)$ para 41 pontos regularmente espaçados. Os pontos conhecidos iniciais são  4 tal como no ponto 1. Repita para 6 e para 8 pontos igualmente espaçados. \n",
+    "d. Agora utilize *splines* cúbicos e calcule o polinomio de interpolação $S(x)$ para 41 pontos regularmente espaçados. Os pontos conhecidos iniciais são  4 tal como no ponto 1. Repita para 6 e para 8 pontos igualmente espaçados. \n",
     "\n",
-    "4. Calcule o erro, $\\epsilon = \\frac{f(x) - S(x)}{f(x)}$. O aumento de número de pontos conhecidos melhora a interpolação?\n",
+    "e. Calcule o erro, $\\epsilon = \\frac{f(x) - S(x)}{f(x)}$. O aumento de número de pontos conhecidos melhora a interpolação?\n",
     "\n",
-    "5. Pode disser alguma coisa sobre qual método é melhor para interpolar a função de Runge?"
+    "f. Pode disser alguma coisa sobre qual método é melhor para interpolar a função de Runge?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "2. **Equação de Laplace**\n",
+    "\n",
+    "\n",
+    "a.  Escreva um algoritmo para interpolação polinomial usando a equação de Laplace. \n",
+    "\n",
+    "b.  Considere quatro pontos internos entre 0 e 1 da função $\\exp(x^2)$. Usando esses pontos realize a interpolação para 32 pontos internos. \n",
+    "\n",
+    "c.  Realize a mesma interpolação utilizando o algoritmo de Leville. \n",
+    "\n",
+    "d.  Compare o erro relativo para os dois métodos no ponto $x=0.5$.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -394,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
