--- a/09b-cubic_splines.ipynb
+++ b/09b-cubic_splines.ipynb
@@ -374,10 +374,10 @@
     "collapsed": true
    },
    "source": [
-    "2. **Equação de Laplace**\n",
+    "2. **Equação de Lagrange**\n",
     "\n",
     "\n",
-    "a.  Escreva um algoritmo para interpolação polinomial usando a equação de Laplace. \n",
+    "a.  Escreva um algoritmo para interpolação polinomial usando a equação de Lagrange. \n",
     "\n",
     "b.  Considere quatro pontos internos entre 0 e 1 da função $\\exp(x^2)$. Usando esses pontos realize a interpolação para 32 pontos internos. \n",
     "\n",
