--- a/11-EDO2.ipynb
+++ b/11-EDO2.ipynb
@@ -233,17 +233,17 @@
     "onde o termo $-\\frac{{\\bf v}}{|v|}$  asegura que a força seja oposta ao movimento. As equações de movimento ficariam:\n",
     "\n",
     "$$\n",
-    "\\frac{d v_x}{dt} = -k v_x^n \\frac{v_x}{|v|} \\; \\;,  \\frac{d v_z}{dt} = -g - k v_y^n \\frac{v_y}{|v|}\n",
+    "\\frac{d v_x}{dt} = -k v_x^n \\frac{v_x}{|v|} \\; \\;,  \\frac{d v_z}{dt} = -g - k v_z^n \\frac{v_z}{|v|}\n",
     "$$\n",
     "\n",
     "$$\n",
     "\\frac{d x}{dt} = v_x \\; \\;,  \\frac{d z}{dt} = v_z\n",
     "$$\n",
     "\n",
-    "com, $|v| = \\sqrt{v_x^2 + v_y^2}$.\n",
+    "com, $|v| = \\sqrt{v_x^2 + v_z^2}$.\n",
     "\n",
     "\n",
-    "1) Adicione as forças de atrito no código acima, verifique o resultado para $n=1$.\n",
+    "1) Adicione as forças de atrito no código acima, verifique o resultado para $n=1$. Experimente com diferentes valores de $k$, e.g., $k=0.01$, $k=0.1$ e $k=1$.\n",
     "\n",
     "2) O valor de $n=1$ é valido para baixas velocidades. Já para velocidades médias e\n",
     "altas $n=3/2$ e $n=2$, respectivamente.  Aumente a velocidade inicial do projetil para $100$\n",
