--- a/13-redes_neurais.ipynb
+++ b/13-redes_neurais.ipynb
@@ -22,26 +22,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-973064789abf>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-973064789abf>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    cd DeepLearningPython35\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Vamos primeiro ao diretorio do codigo\n",
-    "cd DeepLearningPython35"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('DeepLearningPython35-master/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,18 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importamos o modulo da rede neural\n",
     "\n",
-    "    import network"
+    "import network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,43 +88,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 : 8811 / 10000\n",
-      "Epoch 1 : 8862 / 10000\n",
-      "Epoch 2 : 8947 / 10000\n",
-      "Epoch 3 : 9017 / 10000\n",
-      "Epoch 4 : 9020 / 10000\n",
-      "Epoch 5 : 9006 / 10000\n",
-      "Epoch 6 : 9090 / 10000\n",
-      "Epoch 7 : 9092 / 10000\n",
-      "Epoch 8 : 9124 / 10000\n",
-      "Epoch 9 : 9139 / 10000\n",
-      "Epoch 10 : 9163 / 10000\n",
-      "Epoch 11 : 9078 / 10000\n",
-      "Epoch 12 : 9113 / 10000\n",
-      "Epoch 13 : 9107 / 10000\n",
-      "Epoch 14 : 9115 / 10000\n",
-      "Epoch 15 : 9164 / 10000\n",
-      "Epoch 16 : 9164 / 10000\n",
-      "Epoch 17 : 9175 / 10000\n",
-      "Epoch 18 : 9173 / 10000\n",
-      "Epoch 19 : 9162 / 10000\n",
-      "Epoch 20 : 9149 / 10000\n",
-      "Epoch 21 : 9150 / 10000\n",
-      "Epoch 22 : 9170 / 10000\n",
+      "Epoch 0 : 8706 / 10000\n",
+      "Epoch 1 : 8848 / 10000\n",
+      "Epoch 2 : 8904 / 10000\n",
+      "Epoch 3 : 8962 / 10000\n",
+      "Epoch 4 : 9022 / 10000\n",
+      "Epoch 5 : 9003 / 10000\n",
+      "Epoch 6 : 9029 / 10000\n",
+      "Epoch 7 : 9109 / 10000\n",
+      "Epoch 8 : 9062 / 10000\n",
+      "Epoch 9 : 9001 / 10000\n",
+      "Epoch 10 : 9112 / 10000\n",
+      "Epoch 11 : 9099 / 10000\n",
+      "Epoch 12 : 9114 / 10000\n",
+      "Epoch 13 : 9148 / 10000\n",
+      "Epoch 14 : 9072 / 10000\n",
+      "Epoch 15 : 9155 / 10000\n",
+      "Epoch 16 : 9141 / 10000\n",
+      "Epoch 17 : 9158 / 10000\n",
+      "Epoch 18 : 9099 / 10000\n",
+      "Epoch 19 : 9078 / 10000\n",
+      "Epoch 20 : 9197 / 10000\n",
+      "Epoch 21 : 9156 / 10000\n",
+      "Epoch 22 : 9199 / 10000\n",
       "Epoch 23 : 9168 / 10000\n",
-      "Epoch 24 : 9166 / 10000\n",
-      "Epoch 25 : 9171 / 10000\n",
-      "Epoch 26 : 9172 / 10000\n",
-      "Epoch 27 : 9181 / 10000\n",
-      "Epoch 28 : 9145 / 10000\n",
-      "Epoch 29 : 9136 / 10000\n"
+      "Epoch 24 : 9208 / 10000\n",
+      "Epoch 25 : 9190 / 10000\n",
+      "Epoch 26 : 9207 / 10000\n",
+      "Epoch 27 : 9219 / 10000\n",
+      "Epoch 28 : 9224 / 10000\n",
+      "Epoch 29 : 9147 / 10000\n"
      ]
     }
    ],
@@ -161,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
