--- a/08-leitura_escritura.ipynb
+++ b/08-leitura_escritura.ipynb
@@ -1016,7 +1016,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1030,7 +1030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
