--- a/09b-cubic_splines.ipynb
+++ b/09b-cubic_splines.ipynb
@@ -352,10 +352,10 @@
     "1. Vamos interpolar a função de Runge, $f(x) = \\frac{1}{1+25x^2}$, num conjunto de $n$ nós regularmente espaçados\n",
     "\n",
     "$$\n",
-    "x_k = -1 + \\frac{2(k-1)}{n-1}, \\; \\; k = 1,2,3, \\ldots , n\n",
+    "x_k =  \\frac{2k}{n} - 1, \\; \\; k = 0,1,2, \\ldots , n\n",
     "$$\n",
     "\n",
-    "a. Considere os $n=4,6,8,11$ e calcule os polinomios de intepolação de Lagrange $P_N (x)$ para 41 pontos regularmente espaçados.\n",
+    "a. Considere $n=4$ e calcule os polinomios de intepolação de Lagrange $P_N (x)$ para 41 pontos regularmente espaçados.\n",
     "\n",
     "b. Calcule o erro específico no cálculo usando $\\epsilon = \\frac{f(x) - P_N(x)}{f(x)}$. \n",
     "\n",
@@ -365,7 +365,7 @@
     "\n",
     "e. Calcule o erro, $\\epsilon = \\frac{f(x) - S(x)}{f(x)}$. O aumento de número de pontos conhecidos melhora a interpolação?\n",
     "\n",
-    "f. Pode disser alguma coisa sobre qual método é melhor para interpolar a função de Runge?"
+    "f. Pode disser alguma coisa sobre qual método é melhor para interpolar a função de Runge? (pesquise rapidamente e descreva o problema com a interpolaçao polinomial para a função Runge)."
    ]
   },
   {
@@ -396,7 +396,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
