--- a/11-EDO.ipynb
+++ b/11-EDO.ipynb
@@ -89,7 +89,7 @@
     "expandimos a função $y$ em serie de Taylor:\n",
     "\n",
     "$$\n",
-    "\\Delta(t_i, y_i(t_i)) = (y'(t_i) + ... + y^{(p)}(t_i) \\frac{h^{p+1}}{p!})  \\;.\n",
+    "\\Delta(t_i, y_i(t_i)) = (y'(t_i) + ... + y^{(p)}(t_i) \\frac{h^{p-1}}{p!})  \\;.\n",
     "$$\n",
     "\n",
     "Definindo: $y'(t_i) = f(t_i,y_i)$, e truncando $\\Delta$ na primeira derivada, temos:\n",
@@ -624,7 +624,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -638,7 +638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
