--- a/00-intro.ipynb
+++ b/00-intro.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introdução à Computação em Física\n",
+    "# Introdução à Computação em Física 2023-2\n",
     "O objetivo desse curso é apresentar ao aluno as **ferramentas computacionais** necessárias para desenvolver sua pesquisa cientifica. Serão introduzidas tanto ferramentas quanto métodos computacionais que são comunmente usados na física e outras áreas da ciência.\n",
     "\n",
     "## Professor: \n",
@@ -13,8 +13,8 @@
     "Sala 4120\n",
     "\n",
     "## Salas de aula\n",
-    "Ter  13:00 - 14:40, Sala 1027  \n",
-    "Qui  13:00 - 14:40, Sala 1027  \n",
+    "Ter  20:55 - 22:35, Sala 1010  \n",
+    "Qui  19:00 - 20:40, Sala 1010  \n",
     "\n"
    ]
   },
@@ -29,7 +29,7 @@
     "1. Introdução ao curso\n",
     "2. [Introdução ao SO Linux e Vim](./01-linux-vim.ipynb)\n",
     "3. Linux 2\n",
-    "4. Editando documentos em LaTex 1 \n",
+    "4. Editando documentos em LaTex 1  - Uso de [overleaf](https://www.overleaf.com)\n",
     "<img src=\"Figs/word_vs_latex_1_eng.png\" width=50% >\n",
     "5. Editando documentos em LaTex 2\n",
     "6. [Python 1: Introdução](./02-Introducao_ao_Python.ipynb)\n",
@@ -130,7 +130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
