--- a/01-linux-vim.ipynb
+++ b/01-linux-vim.ipynb
@@ -39,20 +39,6 @@
     "\n",
     "O compilador é um \"tradutor\" que converte as diretivas que queremos passar, escritas numa linguagem, à linguagem hex do processador. \n",
     "\n",
-    "\n",
-    "## Breve historia do Linux\n",
-    "\n",
-    "[1972](https://en.wikipedia.org/wiki/C_(programming_language)) - Surgimento da linguagem C (Ken Thompson e Dennis Ritchie, que trabalhavam na Bell Labs). Diferentes empresas criaram compiladores, proprietarios, de C  \n",
-    "[1987](https://en.wikipedia.org/wiki/GNU_Compiler_Collection) - O compilador de C, livre, gratuito, e de código aberto,  GNU,  foi desenvolvido pela Free Software Foundation, criada por Richard Stallman, entre outros  \n",
-    "[1991](https://en.wikipedia.org/wiki/History_of_Linux) - Linus Torvalds desenvolve o Kernel para controlar um processador 80386. Para executar o código, escrito em C, no processador,  Linus usou o compilador GNU. Já que um Kernel não serve de nada sem um compilador e uma terminal e muitas bibliotecas, Linus publicou seu código usando a licencia GNU, a qual é usada no compilador e bibliotecas que ele usou.  A partir de então o sistema operativo se conhece como GNU-Linux.  \n",
-    "\n",
-    "Graças à licência GNU, existem centos de diferentes distribuições: Debian, Slackware, Red Hat, Ubuntu, Mint, etc ...    \n",
-    "\n",
-    "Mesmo sendo pouco usado como desktop, onde Microsoft é ainda o preferido, Linux é a linguagem mais usada em servidores (inclusive os servidores de Microsoft funcionam baixo alguma versão do kernel GNU-Linux).  O sistema operacional de \"smartphones\", Android,  é baseado em Linux e existe em 75% dos telefones do mundo.  \n",
-    "\n",
-    "[2015](https://kernelnewbies.org/Linux_4.0) - A versão 4.0 do Kernel GNU-Linux é lançada\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -74,16 +60,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Breve historia do Linux\n",
+    "\n",
+    "[1972](https://en.wikipedia.org/wiki/C_(programming_language)) - Surgimento da linguagem C (Ken Thompson e Dennis Ritchie, que trabalhavam na Bell Labs). Diferentes empresas criaram compiladores, proprietarios, de C  \n",
+    "[1987](https://en.wikipedia.org/wiki/GNU_Compiler_Collection) - O compilador de C, livre, gratuito, e de código aberto,  GNU,  foi desenvolvido pela Free Software Foundation, criada por Richard Stallman, entre outros  \n",
+    "[1991](https://en.wikipedia.org/wiki/History_of_Linux) - Linus Torvalds desenvolve o Kernel para controlar um processador 80386. Para executar o código, escrito em C, no processador,  Linus usou o compilador GNU. Já que um Kernel não serve de nada sem um compilador e uma terminal e muitas bibliotecas, Linus publicou seu código usando a licencia GNU, a qual é usada no compilador e bibliotecas que ele usou.  A partir de então o sistema operativo se conhece como GNU-Linux.  \n",
+    "[2023](https://www.kernel.org/) - A versão estável mais recente do Kernel de Linux é a 6.4.12\n",
+    "\n",
+    "\n",
+    "Graças à licência GNU, existem centos de diferentes distribuições: Debian, Slackware, Red Hat, Ubuntu, Mint, etc ...\n",
+    "\n",
+    "E uma versão mais familiar: ANDROID\n",
+    "\n",
+    "Mesmo sendo pouco usado como desktop, onde Microsoft é ainda o preferido, Linux é a linguagem mais usada em servidores (inclusive os servidores de Microsoft funcionam baixo alguma versão do kernel GNU-Linux).  O sistema operacional de \"smartphones\", Android,  é baseado em Linux e existe em 75% dos telefones do mundo.  \n",
+    "\n",
+    "Distribuição sugerida de Linux: [POP-OS](https://pop.system76.com/)\n",
+    "\n",
+    "Windows disponibiliza a opção de rodar linux sem desinstalar o SO windows usando [WSL](https://learn.microsoft.com/pt-br/windows/wsl/install)\n",
+    "\n",
+    "A melhor opção contudo, é fazer um \"dual boot\" fazendo uma partição do disco rígido. \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## A estrutura do Sistema Operacional Linux \n",
     "\n",
     "O SO das distribuições de linux, e aquelas beaseadas nele, tem a seguinte estrutura  \n",
     "\n",
     "<img src=\"Figs/linux-tree.png\" width=60% >\n",
     "\n",
-    "[Nesta](https://en.wikipedia.org/wiki/Filesystem_Hierarchy_Standard) página se detalha o que está armazenado nessa hierarquia de arquivos.\n",
-    "\n",
-    "\n",
-    "  \n",
+    "[Nesta](https://pt.wikipedia.org/wiki/Filesystem_Hierarchy_Standard) página se detalha o que está armazenado nessa hierarquia de arquivos.\n",
     "  \n"
    ]
   },
@@ -301,7 +312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
