--- a/02-Introducao_ao_Python.ipynb
+++ b/02-Introducao_ao_Python.ipynb
@@ -138,6 +138,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Conversão entre tipos de números:\n",
+    "\n",
+    "`int(x)`: converte a variável x a um número inteiro\n",
+    "\n",
+    "`long(x)`: converte a variável x a um número inteiro de precisão dupla\n",
+    "\n",
+    "`float(x)`: converte a variável x a um número de ponto flotante (real)\n",
+    "\n",
+    "`complex(x)`: converte a variável x a um número imaginario com parte real x e parte imaginaria 0\n",
+    "\n",
+    "`complex(x,y)`: converte as variáveis x e y a um número imaginario com parte real x e parte imaginaria y\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Boleanos"
    ]
   },
@@ -1331,7 +1349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1345,7 +1363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
