--- a/03-Introducao_ao_Python_2.ipynb
+++ b/03-Introducao_ao_Python_2.ipynb
@@ -675,11 +675,12 @@
        "            src=\"https://www.youtube.com/embed/ZYgFuUl9_Vs\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
+       "            \n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7fc43c342da0>"
+       "<IPython.lib.display.YouTubeVideo at 0x7fb630713190>"
       ]
      },
      "execution_count": 1,
@@ -776,7 +777,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -790,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
