--- a/09b-cubic_splines.ipynb
+++ b/09b-cubic_splines.ipynb
@@ -365,7 +365,7 @@
     "\n",
     "e. Calcule o erro, $\\epsilon = \\frac{f(x) - S(x)}{f(x)}$. O aumento de número de pontos conhecidos melhora a interpolação?\n",
     "\n",
-    "f. Pode disser alguma coisa sobre qual método é melhor para interpolar a função de Runge? (pesquise rapidamente e descreva o problema com a interpolaçao polinomial para a função Runge)."
+    "f. Pode disser alguma coisa sobre qual método é melhor para interpolar a função de Runge? (pesquise e descreva o problema com a interpolaçao polinomial para a função Runge)."
    ]
   },
   {
@@ -374,16 +374,7 @@
     "collapsed": true
    },
    "source": [
-    "2. **Equação de Lagrange**\n",
-    "\n",
-    "\n",
-    "a.  Escreva um algoritmo para interpolação polinomial usando a equação de Lagrange. \n",
-    "\n",
-    "b.  Considere quatro pontos internos entre 0 e 1 da função $\\exp(x^2)$. Usando esses pontos realize a interpolação para 32 pontos internos. \n",
-    "\n",
-    "c.  Realize a mesma interpolação utilizando o algoritmo de Leville. \n",
-    "\n",
-    "d.  Compare o erro relativo para os dois métodos no ponto $x=0.5$.\n"
+    "\n"
    ]
   },
   {
