--- a/10-algebra-linear.ipynb
+++ b/10-algebra-linear.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "       [4, 6, 8]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "array([2, 4, 6])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "array([38, 58, 80])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,25 +429,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-1.    0.    0.5 ]\n",
-      " [ 0.   -2.    1.5 ]\n",
-      " [ 0.5   1.5  -1.25]]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(3, 3)"
+       "array([[-1.  ,  0.  ,  0.5 ],\n",
+       "       [ 0.  , -2.  ,  1.5 ],\n",
+       "       [ 0.5 ,  1.5 , -1.25]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,6 +448,24 @@
    "source": [
     "C = np.array([[-1,  0,  0.5],[0, -2,  1.5],[ 0.5,  1.5, -1.25]])\n",
     "C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "m, n = C.shape\n",
+    "print(n)"
    ]
   },
   {
@@ -477,7 +488,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tempo usado =  0.01886749267578125\n"
+      "tempo usado =  0.016446352005004883\n"
      ]
     }
    ],
@@ -502,14 +513,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tempo usado =  0.028328418731689453\n"
+      "tempo usado =  0.03328728675842285\n"
      ]
     }
    ],
@@ -522,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,7 +1551,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1554,7 +1565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
