--- a/13-redes_neurais.ipynb
+++ b/13-redes_neurais.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('DeepLearningPython35-master/')"
+    "os.chdir('./deep-learning-python-3.5-master/NN_Nielsen/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "td = list(training_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "numero = (td[-1][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "784"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(numero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,43 +127,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 : 8706 / 10000\n",
-      "Epoch 1 : 8848 / 10000\n",
-      "Epoch 2 : 8904 / 10000\n",
-      "Epoch 3 : 8962 / 10000\n",
-      "Epoch 4 : 9022 / 10000\n",
-      "Epoch 5 : 9003 / 10000\n",
-      "Epoch 6 : 9029 / 10000\n",
-      "Epoch 7 : 9109 / 10000\n",
-      "Epoch 8 : 9062 / 10000\n",
-      "Epoch 9 : 9001 / 10000\n",
-      "Epoch 10 : 9112 / 10000\n",
-      "Epoch 11 : 9099 / 10000\n",
-      "Epoch 12 : 9114 / 10000\n",
-      "Epoch 13 : 9148 / 10000\n",
-      "Epoch 14 : 9072 / 10000\n",
-      "Epoch 15 : 9155 / 10000\n",
-      "Epoch 16 : 9141 / 10000\n",
-      "Epoch 17 : 9158 / 10000\n",
-      "Epoch 18 : 9099 / 10000\n",
-      "Epoch 19 : 9078 / 10000\n",
-      "Epoch 20 : 9197 / 10000\n",
-      "Epoch 21 : 9156 / 10000\n",
-      "Epoch 22 : 9199 / 10000\n",
-      "Epoch 23 : 9168 / 10000\n",
-      "Epoch 24 : 9208 / 10000\n",
-      "Epoch 25 : 9190 / 10000\n",
-      "Epoch 26 : 9207 / 10000\n",
-      "Epoch 27 : 9219 / 10000\n",
-      "Epoch 28 : 9224 / 10000\n",
-      "Epoch 29 : 9147 / 10000\n"
+      "Epoch 0 : 8668 / 10000\n",
+      "Epoch 1 : 8859 / 10000\n",
+      "Epoch 2 : 8909 / 10000\n",
+      "Epoch 3 : 8982 / 10000\n",
+      "Epoch 4 : 8956 / 10000\n",
+      "Epoch 5 : 8957 / 10000\n",
+      "Epoch 6 : 9046 / 10000\n",
+      "Epoch 7 : 9057 / 10000\n",
+      "Epoch 8 : 9090 / 10000\n",
+      "Epoch 9 : 9095 / 10000\n",
+      "Epoch 10 : 9099 / 10000\n",
+      "Epoch 11 : 9077 / 10000\n",
+      "Epoch 12 : 9093 / 10000\n",
+      "Epoch 13 : 9078 / 10000\n",
+      "Epoch 14 : 9139 / 10000\n",
+      "Epoch 15 : 9131 / 10000\n",
+      "Epoch 16 : 9111 / 10000\n",
+      "Epoch 17 : 9143 / 10000\n",
+      "Epoch 18 : 9092 / 10000\n",
+      "Epoch 19 : 9146 / 10000\n",
+      "Epoch 20 : 9131 / 10000\n",
+      "Epoch 21 : 9164 / 10000\n",
+      "Epoch 22 : 9168 / 10000\n",
+      "Epoch 23 : 9162 / 10000\n",
+      "Epoch 24 : 9074 / 10000\n",
+      "Epoch 25 : 9119 / 10000\n",
+      "Epoch 26 : 9172 / 10000\n",
+      "Epoch 27 : 9174 / 10000\n",
+      "Epoch 28 : 9164 / 10000\n",
+      "Epoch 29 : 9169 / 10000\n"
      ]
     }
    ],
@@ -164,5 +203,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
